fix grid spacing of recipe cards and recipeList styling

--- a/src/styles/_recipe.scss
+++ b/src/styles/_recipe.scss
@@ -1,5 +1,5 @@
 .recipe {
-    width: 300px;
+    width: 100%;
     height: 350px;
     background-color: white;
     box-shadow: 3px 3px 5px rgba(148, 148, 148, 0.788);
@@ -47,7 +47,8 @@
 
     &-outline {
         height: 330px;
-        width: 280px;
+        width: calc(100% - 2rem);
+        
         border-radius: 10px;
         border: 1px solid black;
         position: absolute;
